--- a/app/src/main/res/layout/movie_cell.xml
+++ b/app/src/main/res/layout/movie_cell.xml
@@ -10,7 +10,7 @@
         android:id="@+id/movieCellTextViewTitle"
         android:gravity="center"
         android:lines="2"
-        android:textSize="16dp"/>
+        android:textSize="@dimen/text_size_large" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,6 +21,6 @@
         android:id="@+id/movieCellTextViewScore"
         android:gravity="center"
         android:lines="1"
-        android:textSize="12dp"
+        android:textSize="@dimen/text_size_small"
         android:textStyle="bold"/>
 </LinearLayout>
